implement bare bones of a Donations view

--- a/app/views/donate.html
+++ b/app/views/donate.html
@@ -1,1 +1,17 @@
-<p>This is the donate view.</p>
+<div class="panel panel-default">
+	<div class="panel-body" style="font-size:1.25em;">
+
+		<p>The "Donations" view is not yet functional.</p>
+
+		<p>It exists here as a teaser of functionality to come.</p>
+
+		<p>The following is indeed a live donation form, but it is currently a simple javascript-embedded, hardcoded Kimbia/GiveMN donation form for a <a href="https://givemn.org/organization/Cross-Generation-Dba-Connected-Families">particular organization</a>; it is not yet integrated with the actual workings of the GivingPortfolio app.</p>
+	
+		<div class="panel panel-success">
+			<div class="panel-body">
+				<script src="https://widgets.kimbia.com/widgets/form.js?channel=givemn-annual/onlineregistered-embed&messagingProfile=cross-generation-dba-connected-families-6095&metadata=%7B%22orgId%22%3A%226055693%22%2C%22orgName%22%3A%22Cross-Generation%20dba%20Connected%20Families%22%2C%22orgEin%22%3A%22010711547%22%2C%22orgReportingCode%22%3A%22%22%7D&urlData=%7B%22doneeType%22%3A%22organization%22%2C%22doneeId%22%3A%226055693%22%7D"></script>
+			</div>
+		</div>
+
+	</div>
+</div>
