better 'select or add' message

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -293,7 +293,7 @@
 
 			</div><!-- ng-if="orgs.selectedOrg" -->
 			<div id="select-org-message" ng-if="!orgs.selectedOrg">
-				Please select or add an organization.
+				Please select or add a recipient organization.
 			</div>
 		</div><!-- .panel-body -->
 	</div><!-- .panel -->
